# polynomial

./: CMakeLists.txt  polynomial-config.cmake.in
cmake/: polynomial_deps.cmake
polynomial/: CMakeLists.txt  config.hpp.in  polynomial.hpp
polynomial/details/: Dynamic_polynomial.hpp  Lifted_polynomial.hpp  Polynomial.hpp  import.hpp  utility.hpp
polynomial_testing/: CMakeLists.txt  polynomial_test.cpp  test_macros.hpp
